Display device capabilities after first interaction

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
 			</section>
 			<section class="annotations" style="opacity: 0">
 				<p>The three semicircles are spaced 50 milliseconds apart.</p>
+				<h2>Device Capabilities</h2>
+				<dl class="capabilities"></dl>
 			</section>
 		</header>
 
