--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
 	<body>
 		<header>
 			<section class="instructions">
-				<h1>DragLag</h1>
+				<h1><b>Drag</b>Lag</h1>
 				<p>Want to know how far touch or mouse events lag behind in your browser?</p>
-				<p>Start dragging a finger across the screen. Try to keep a constant speed.</p>
+				<p>Start dragging across the screen. Try to keep a constant speed.</p>
 			</section>
 			<section class="annotations" style="opacity: 0">
-				<p>The three semicircles are spaced 50 milliseconds apart.</p>
+				<p>The three semicircles around your <span class="js-input-device">input device</span> are spaced 50 milliseconds apart.</p>
 				<h2>Device Capabilities</h2>
 				<dl class="capabilities"></dl>
 			</section>
